--- a/objectchain-common/pom.xml
+++ b/objectchain-common/pom.xml
@@ -1,19 +1,25 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-    <artifactId>objectchain</artifactId>
-    <groupId>com.sirolf2009</groupId>
-    <version>0.0.1-SNAPSHOT</version>
-  </parent>
+		<artifactId>objectchain</artifactId>
+		<groupId>com.sirolf2009</groupId>
+		<version>0.0.1-SNAPSHOT</version>
+	</parent>
 	<artifactId>objectchain-common</artifactId>
 	<name>Objectchain Common</name>
-	
+
 	<properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <xtend.version>2.12.0</xtend.version>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<xtend.version>2.12.0</xtend.version>
 	</properties>
-		
+
 	<dependencies>
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.8.1</version>
+		</dependency>
 	</dependencies>
 </project>
