--- a/objectchain-network/pom.xml
+++ b/objectchain-network/pom.xml
@@ -12,14 +12,14 @@
 
 	<dependencies>
 		<dependency>
+			<groupId>com.sirolf2009</groupId>
+			<artifactId>objectchain-common</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+		<dependency>
 			<groupId>io.netty</groupId>
 			<artifactId>netty-all</artifactId>
 			<version>4.1.15.Final</version>
-		</dependency>
-		<dependency>
-			<groupId>com.google.code.gson</groupId>
-			<artifactId>gson</artifactId>
-			<version>2.6.2</version>
 		</dependency>
 	</dependencies>
 
