--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,7 @@
 				<configuration>
 					<outputDirectory>${project.build.directory}/xtend-gen/main</outputDirectory>
 					<testOutputDirectory>${project.build.directory}/xtend-gen/test</testOutputDirectory>
+					<javaSourceVersion>1.8</javaSourceVersion>
 				</configuration>
 			</plugin>
 			<plugin>
