--- a/pom.xml
+++ b/pom.xml
@@ -14,8 +14,8 @@
 		<module>objectchain-network</module>
 		<module>objectchain-tracker</module>
 		<module>objectchain-node</module>
-    <module>objectchain-mining</module>
-  </modules>
+		<module>objectchain-mining</module>
+	</modules>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -32,6 +32,17 @@
 			<groupId>org.eclipse.xtend</groupId>
 			<artifactId>org.eclipse.xtend.lib</artifactId>
 			<version>${xtend.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>1.7.25</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-slf4j-impl</artifactId>
+			<version>2.9.0</version>
+			<scope>test</scope>
 		</dependency>
 	</dependencies>
 
