--- a/objectchain-common/pom.xml
+++ b/objectchain-common/pom.xml
@@ -17,9 +17,9 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>com.google.code.gson</groupId>
-			<artifactId>gson</artifactId>
-			<version>2.8.1</version>
+			<groupId>com.esotericsoftware</groupId>
+			<artifactId>kryo</artifactId>
+			<version>4.0.1</version>
 		</dependency>
 	</dependencies>
 </project>
