networking fixes and test project

--- a/objectchain-example/pom.xml
+++ b/objectchain-example/pom.xml
@@ -15,5 +15,6 @@
   	<module>objectchain-example-node</module>
   	<module>objectchain-example-tracker</module>
     <module>objectchain-example-miner</module>
+    <module>objectchain-example-tests</module>
   </modules>
 </project>
