--- a/objectchain-example/pom.xml
+++ b/objectchain-example/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>com.sirolf2009</groupId>
     <artifactId>objectchain</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>0.0.1</version>
   </parent>
   <artifactId>objectchain-example</artifactId>
   <name>objectchain-example</name>
