--- a/objectchain-tracker/pom.xml
+++ b/objectchain-tracker/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>com.sirolf2009</groupId>
 		<artifactId>objectchain</artifactId>
-		<version>0.0.1</version>
+		<version>0.0.2-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>objectchain-tracker</artifactId>
